--- a/src/Components/NotFound/NotFound.scss
+++ b/src/Components/NotFound/NotFound.scss
@@ -42,7 +42,7 @@
 }
 
 .stars{
-    background: url(http://salehriaz.com/404Page/img/overlay_stars.svg);
+    background: url('../../Assets//images/404.svg');
     background-repeat: repeat;
     background-size: contain;
     background-position: left top;
